---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-02-05
  Bugfixes:
    - Fix fluid capacity calculation (change for factorio 2.0 API)
    - Fix crash with fluid deliveries (#2, reported by @disifere)
    - Fix crash with assertion failed (#1, reported by @Hoochie63)
  Changes:
    - Fix weird fractional stack reports for fluids
    - Improve short-circuit logic
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-02-03
  Bugfixes:
    - Fixed the info.json (well, the *one* time I did not test it...)
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-02-03
  Changes:
    - Ported to Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.18.6
Date: 2024-01-30
  Bugfixes:
    - Message delivery-removed-depot used fallback stop names instead of Rich Text #331
---------------------------------------------------------------------------------------------------
Version: 1.18.5
Date: 2023-08-30
  Features:
    - moved logistic ports to their own technology
    - new icon for logistic ports
---------------------------------------------------------------------------------------------------
Version: 1.18.4
Date: 2023-07-28
  Features:
    - Upgrade planner functionality for train-stop and port #323
---------------------------------------------------------------------------------------------------
Version: 1.18.3
Date: 2023-04-01
  Bugfixes:
    - get_next_logistic_stop returns nil when called from on_train_schedule_changed at delivery creation #319
---------------------------------------------------------------------------------------------------