@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
-Date: ????
-  Changes:
+Date: 2025-02-06
+  Bugfixes:
+    - Fix "unscheduled cargo" messages even if everything is ok. (#3, reported by @Litcube)
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2025-02-05
